- Created userLogin.php    - Takes in the user login details from landing.html and checks if the user exists in the database, if so it will echo the details back to prove connection details

--- a/landing.html
+++ b/landing.html
@@ -73,6 +73,7 @@
 
   <div class="login-container">
     <h2>Mobile Banking Application</h2>
+    <form action="/userLogin.php" method="POST">
       <label for="role">Login As</label>
       <select id="role" name="role" required>
         <option value="user">User</option>
