- Too much to comment on

--- a/landing.html
+++ b/landing.html
@@ -83,8 +83,8 @@
   <div class="login-container">
     <h2>Mobile Banking Application</h2>
     <form action="/userLogin.php" method="POST">
-      <label for="username">Username</label>
-      <input type="text" id="username" name="username" placeholder="Enter username" required>
+      <label for="firstName">First name</label>
+      <input type="text" id="firstName" name="firstName" placeholder="Enter your first name" required>
 
       <label for="password">Password</label>
       <input type="password" id="password" name="password" placeholder="Enter password" required>
@@ -93,7 +93,7 @@
     </form>
 
     <div class="create-account-link">
-      <a href="/register">Create account</a>
+      <a href="/register.html">Create account</a>
     </div>
   </div>
 
